# s3-sftp-sync

./: .gitignore  README.md  config-local.yml  config.conf  config.yml  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  s3_sftp_sync.py  setup.py
s3_sftp_sync/: cli.py
